--- a/lesson9/css/styles-small.css
+++ b/lesson9/css/styles-small.css
@@ -91,6 +91,12 @@ h2 {
     text-align: center;
 }
 
+h4 {
+    
+    font-style: italic;
+
+}
+
 body {
     margin: auto;
     font-family: 'Muli', sans-serif;
